@@ -1,14 +1,12 @@
 DIST virt-manager-0.10.0-1cd29748.tar.xz 11716 SHA256 a9293c2fcadd230cdfb13977c7c5520c0f74e38cebd199e8de2cce68e5b0efd3 SHA512 87312537a05a99c7df4c3fcf47bc4820a3e8b6c59bd39adf7aa803383bc3f69aa615dcada71b82b51bb92c83daaa7cb528279dcb9b6f36247d6e24665376a086 WHIRLPOOL e86c0dc6ae774c047bb130ecef618a4583ac76bb265b08c45d41ee1d8e10a128a6a3a1bf7e02827f70201b7ec973e7e95756cc4f11aece7d6bda87e0085bfa0d
 DIST virt-manager-0.10.0.tar.gz 2548256 SHA256 59bd8f316917228885261a1ecbeb9aadbb0b0e02cdf5fc974c78113c5814346d SHA512 13eaed3645ccee79da6a972e02bb182b5bd24981ff55b6322b8aaf2689fab520f22f1e729bb5f5287d66526252a31a531c6595ee27489a52fb4829ae18cf8204 WHIRLPOOL e3e34506171217c63e5e5337157f75006554afb156a430f2ee7f11e354d0c490adc371174b342efb4cc90ab0686d2c74f42b4d52c55c0a9221868670980fdbb3
-DIST virt-manager-0.9.5.tar.gz 1773882 SHA256 5d2afb282fb8c4401f9e203dcb41a62746b9a909258d440d508219bc1a33803d SHA512 a1ecf6fe9f3ddacfe43006cfc388d9324c457be91767792119d8a112b190739e3274dfeb7cffd28534b86a33f86079c569d8337eeddaa9d60ed69f82d8a4627f WHIRLPOOL d15728e55c0a3e361b42b6e615bed50b8870c436a12ae0ececcd80d47d0482ea01c33f5497672e050aa6465f9b031948bf92925710c4340837d789d4634506c8
 DIST virt-manager-1.0.1.tar.gz 2472879 SHA256 08e3740ae07292bc3f68160a43897fccb90d7bc14ffb133c8ad685c9d44444d8 SHA512 a7ef49b5f985998a5dd0dc27c1f42131c2df7f8c4b54d2e11843a25783ae05912445f01a1e4b00d4d8a38e8135d35d5863273b6f68dd253bc1159a85b0df6652 WHIRLPOOL cdf9a3f3e53ae101797cd3a129401b160293919dc1f09542370baf34c8197fe61c20b900f6b9f81a35b9c188a4c30856cf5393d23a2028f6cfc757b6ca3ef68b
 DIST virt-manager-1.1.0.tar.gz 2509440 SHA256 ab0906cb15a132f1893f89ac4ca211c6c2c9c2d1860fbc285edbf9451c0f7941 SHA512 8c3aa56e13f1ec4a67e353b15b4f61bdc067300dbc459790b04e5f5258bf526694ec712a9f74d7af48ddd271081d48ae98d576f4bc5ed139e046620a9aa64e2d WHIRLPOOL aaffdf75b313c88a10648503bf552357139aff2a1624da1b17cac3975fec21ad6c3ccce00999ef8f4f1f4731aabf5ae2c07e70e453785caefe932c3b0deab456
 EBUILD virt-manager-0.10.0-r1.ebuild 2073 SHA256 23b643a9a64b52354d4f74c8de955fc54cb64f7ef0b2c85ebc865a5a266011c7 SHA512 14b4eccad392dbfd84907d55ed2226dd0f97dee6d3bf9d81a5c4db3ca995198731def55686627bd99a03522540330a9dad1aac77a21e1170bccc760fe4cf80cd WHIRLPOOL e4ed48557a0700802fe878ee5c2aefacba8156c95894b311ba93b13b9ab4828e08c2c6d6843e1704edd6cf27ff61311beee3ecfc2e8ffedde956e1894420d448
 EBUILD virt-manager-0.10.0-r2.ebuild 2539 SHA256 335c08886708d815be7c44fdae923ddd08a6f448888521a6acc69c5af8df5182 SHA512 35e74ae4539b0fe7bcbd218e4536aae97ed368aa0be6f5f219dec8c88b2c0aea800bbba450285e7bb4fecb8fbcdc1bccd46d72708c8d9b16edb839a9a72c782b WHIRLPOOL 0f468a342522ae0ec7dd66119bc81a0b20bd49a11874a8dd85a7ad0bbecfa5ff28dd54ef7c6ab23ebbd9f46ee66c672db453985f433df39a36e989726205741a
 EBUILD virt-manager-0.10.0.ebuild 2298 SHA256 4b11437d42dfbbaf15cdf3d567d5b414dcb6853d15ea9f29c8143780686270e6 SHA512 0a8ebeb270571de3a5467e4efccd3f00db1c556017d04db6d4b753f82eac760e39b12f01e0a1d4044279e59c76479588d7271aaa2c37e677f41b33aca310d700 WHIRLPOOL 9e5e1f5ea179fea1c7c5b5f8af0754e9e7bd58221c898ac2db6c669e0e845f21c6c9536205de8fe6b8bc94a5e8bf2cd03e0a4a1a5a4d4d34a475e9b16dc2bef7
-EBUILD virt-manager-0.9.5.ebuild 2651 SHA256 b36fbda7acd3d873ba408bac74bbb801fc697bf771443e69353c1a1f5c6c7dc9 SHA512 bfe17dda6a5d98494135040ee23875dc4df107cfd9e324405612ba473dea8537d18b37e93515b2939931fa58dacfb3014a1ed9e75b7bf1c9929c4046ac508487 WHIRLPOOL a23f89d18d7a94c6aea1732e9bb005a46b9c324ed7a27528ffe75f7b0448ae6f31d947a9b2501d28540687d7c3f70ddbb75c3c9f7197afda9c595d4ccc66fdef
 EBUILD virt-manager-1.0.1.ebuild 2450 SHA256 2c3d03b3daced98be0b8f7015f99bd6e08af958c47c2b635a837c6d620b9c33d SHA512 2cf1dbb2b676b26f9b8c18b2d3bfe596ca50bfca6863950701422e4c2971c1381e179184d151098e2fbb599fe82ff4eb7ad8574185f46132f5587a957d9cfd30 WHIRLPOOL 8b76e007f93c4255b6ada6919b8720415c437398b3d55630cf317842bf428b04581ac1b1055689da041451138b57b58c92717d0bb279934c561b5717e3d28fc1
 EBUILD virt-manager-1.1.0.ebuild 2450 SHA256 dfdbf8b8e37263d131e7c2a0ff285759286decf290f03fc06ea8ed7a6eebbc0b SHA512 0d51f50fe73f61a983e18a8002b35718b52cd16fa85945a4d8b4d11fba7269f56121ad1b81ec9a4d364f423bb02b7c6456a42df63acf98895fc0753cf1dc9af0 WHIRLPOOL 17ec5d188288f6a0d7e0b4d6190b84e9217dbe12b06a19ed1cd0370d3fdb46557142cb0aa25d895e55a113f08acff05ccad1b44777a011e7033c6e8d57fb2d09
 EBUILD virt-manager-9999.ebuild 2450 SHA256 f2c6ab270c0039dd64538bda31f6db4876c8112388ed738f7fb72fc071e861e5 SHA512 31ed05da56a525140526de6997f8b9b9978be2696fc00bda4911ba71051624a66d48acc635efd0295786bb5f97686d11a4623ccce5e6e6b9df29765c1f50de31 WHIRLPOOL 481c8327c55bb7ee87f3c9a66e96ac4d4a69f01b7ce103b4140343c414e8d7b6ce97444838c5dd5ca3649192f416efdf4b1ca11f3ec8d067ac605d30d61fd821
-MISC ChangeLog 20156 SHA256 adc8c925da752cdbd5d4426a1f934bbc8ad8bee677934b55451c4c51db502588 SHA512 774263e8f3b095c1d30e0b392947397c90d5fa434773da094c9de6a0897a5578f179292ab049cd429b247f7a75a2afc5fccc954257109ba30a3ee7132b71f764 WHIRLPOOL a83548e9c3e0dfd5d53c128125a0867a13c3d83f6fa337aeefa2b1edeb3c8dd6665f49733b801f1571dc68ab7183c5f6e4607e65b530a936c4047775e6582d75
+MISC ChangeLog 20286 SHA256 0d80ea9c372d4dd8e5dd7ea7e61f81fa89b1f52b53720ddf16eb800adc9bc64d SHA512 37dda9074817f09f0cc2a463a9bee7fb96dbff09d1501c6ae5bee94c3c037ef00d09039a01534e314bc6c20efa05ceca47fee38d65d308791a0c9c4b3da9dbde WHIRLPOOL f8e9e26bc772f54736e347007bf9d7974aa80d09f29350bacf787c0304c859b078a23403f58cd040655dec5571c2f2bbd4e0cb00338a5ed1730edafa19713577
 MISC metadata.xml 722 SHA256 70795a507d431d9f6682777a65b480eeb0d762368f3150552b7d17bf98f96bed SHA512 1a6cb74025b5f750c82f7c373638a764f19057bbb076e96688f73690362ef197d8a38333873f8ec5baaa9cdf11a0848c83c1d86403f17b70347d7f6ca8fcbe3f WHIRLPOOL 5a3b8cbfbdbada615803ac5e6cf3a21ebc6f5d15ee1d440be6de3efcd129557c6651aac91192b8b94ed7171e856cc564e9f49c7c5b6d425d2b778621f644c7ef
