@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/virt-manager
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-manager/ChangeLog,v 1.108 2014/10/19 16:19:15 thev00d00 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-manager/ChangeLog,v 1.109 2014/11/02 07:22:37 patrick Exp $
+
+  02 Nov 2014; Patrick Lauer <patrick@gentoo.org> -virt-manager-0.9.5.ebuild:
+  Remove old version with unsatisfiable dependencies
 
 *virt-manager-1.1.0 (19 Oct 2014)
 
